--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,10 @@
-body {
-    background-color: skyblue;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.text-xs-custom {
+    font-size: 0.5rem;
+}
+.success{
+    
 }
