--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,17 +1,47 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
-        {% block stylesheets %}
-        {% endblock %}
 
-        {% block javascripts %}
-            {% block importmap %}{{ importmap('app') }}{% endblock %}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
+	<head>
+		<meta charset="UTF-8">
+		<title>
+			{% block title %}Welcome!
+			{% endblock %}
+		</title>
+		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
+
+		{% block stylesheets %}
+			{{ encore_entry_link_tags('app') }}
+		{% endblock %}
+
+		{% block javascripts %}
+			{{ encore_entry_script_tags('app') }}
+		{% endblock %}
+	</head>
+
+	<body>
+		{% include "_partials/_navbar.html.twig" %}
+		{% for type, messages in app.flashes %}
+			{% for message in messages %}
+				{% set flashClass = '' %}
+
+				{% if type == 'success' %}
+					{% set flashClass = 'bg-green-100 text-green-800 border-green-400' %}
+				{% elseif type == 'error' %}
+					{% set flashClass = 'bg-red-100 text-red-800 border-red-400' %}
+				{% elseif type == 'warning' %}
+					{% set flashClass = 'bg-yellow-100 text-yellow-800 border-yellow-400' %}
+				{% elseif type == 'info' %}
+					{% set flashClass = 'bg-blue-100 text-blue-800 border-blue-400' %}
+				{% endif %}
+
+				<div class="rounded-md p-4 mb-4 border-l-4 text-center {{ flashClass }}">
+					{{ message }}
+				</div>
+			{% endfor %}
+		{% endfor %}
+
+
+		{% block body %}{% endblock %}
+	</body>
+
 </html>
