--- a/templates/delivery_location/formulaire.html.twig
+++ b/templates/delivery_location/formulaire.html.twig
@@ -9,7 +9,7 @@
 			<div id="form-container">
 				<h2 class="text-2xl font-bold text-center mb-6">Formulaire  Ajout Lieu de livraison
 				</h2>
-				{{ form_start(form, {'attr': {'id': 'shipment-form', 'class': 'space-y-6'}}) }}
+				{{ form_start(form, {'method':'POST','attr': {'id': 'shipment-form', 'class': 'space-y-6'}}) }}
 				{{ form_widget(form) }}
 				<div class="text-center mt-6">
 					<button type="submit" class="w-full bg-blue-500 text-white py-2 px-4 rounded-lg font-semibold hover:bg-blue-600 transition duration-300">
